Fix button and list spacing

--- a/src/main/resources/org/roxburylatin/advcompsci/quizapp/application/teacher/teacher-view-styles.css
+++ b/src/main/resources/org/roxburylatin/advcompsci/quizapp/application/teacher/teacher-view-styles.css
@@ -126,6 +126,12 @@
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 5, 0, 0, 1);
 }
 
+.list-view .list-cell:filled:selected,
+.list-view .list-cell:filled:selected:hover {
+    -fx-background-color: darkorange;
+    -fx-text-fill: white;
+}
+
 /* --- Title Styling --- */
 .title {
     -fx-font-size: 24px;
